# ape

./: .gitignore  CMakeLists.txt  ape.sln  buildcmake.sh  switch-to-debug.sh  switch-to-release.sh
DebugPath/: close.bat  logger.cfg  run.bat  server.cfg  server.cfg.redwar  syslog.cfg
FlashFile/: ProtocolMgr.as  ProtocolMgr.lua
ProtoMessage/: FriendInfoLite.proto  MsgBuildingItem.proto  MsgBunker.proto  MsgCommon.proto  MsgGameUnit.proto  MsgHangars.proto  MsgMission.proto  MsgPlanet.proto  MsgShipyard.proto  MsgSocialItems.proto  MsgTransaction.proto  RceBattleDamagesPack.proto  RceCustomizedActivity.proto  RceDeployUnits.proto  RceFinished.proto  RceHeartbeat.proto  RceItemDamaged.proto  RceItemMineExploded.proto  RceLogin.proto  RceNpcAttackStart.proto  RceObtainAskForHelp.proto  RceObtainAttackerList.proto  RceObtainBattleReplay.proto  RceObtainCustomizer.proto  RceObtainHangarsHelp.proto  RceObtainMessagesList.proto  RceObtainNeighborsList.proto  RceObtainNpcList.proto  RceObtainPayUrlParame.proto  RceObtainRandomTargets.proto  RceObtainSocialItems.proto  RceObtainSocialUserInfo.proto  RceObtainUniverse.proto  RceObtainVisitHelps.proto  RceOnlineReward.proto  RceQueryCheckAndLockAccountIfPossible.proto  RceQueryPvE.proto  (+66 more)
common/: CMakeLists.txt  Clock.cpp  Clock.h  Commons.h  DBC.cpp  DBC.h  DateTime.cpp  DateTime.h  GeomUtil.cpp  GeomUtil.h  HotCacheDBCfg.cpp  HotCacheDBCfg.h  IndexedTime.h  Ini.cpp  Ini.h  Log.cpp  Log.h  LogDef.cpp  LogDef.h  Msg2QQ.cpp  Msg2QQ.h  Proto2Json.cpp  Proto2Json.h  Rand.cpp  Rand.h  ServerConfig.cpp  ServerConfig.h  Singleton.h  SysLog.cpp  SysLog.h  SysLogNet.cpp  SysLogNet.h  TicTac.h  Timestamp.cpp  Timestamp.h  const_country_def.h  const_def.h  coredump.cpp  coredump.h  counter.cpp  (+21 more)
common/json/: forwards.h  json_value.cpp  json_writer.cpp  value.h  writer.h
common/xml/: tinyxml.cpp  tinyxml.h
countryd/: CMakeLists.txt  CountryConfigMgr.cpp  CountryConfigMgr.h  CountryDataHandler.cpp  CountryDataHandler.h  CountryDataSaver.cpp  CountryDataSaver.h  CountryDefine.h  CountryEventHandler.cpp  CountryEventHandler.h  CountryNetHandler.cpp  CountryNetHandler.h  CountryRgnDataHandler.cpp  CountryRgnDataHandler.h  GameHandler.cpp  GameHandler.h  GuildBtlDBHandler.cpp  GuildBtlDBHandler.h  MemCacheServerHandler.cpp  MemCacheServerHandler.h  compile-proto.bat  country.cpp  country.h  countryDB.pb.cpp  countryDB.pb.h  countryDB.proto  countryd.vcproj
countryd/event/: BaseEvent.h  DealArenaEvent.cpp  DealArenaEvent.h  DealBossBtlEvent.cpp  DealBossBtlEvent.h  DealCountryEvent.cpp  DealCountryEvent.h  DealGuildEvent.cpp  DealGuildEvent.h  DealGuildRedEnvelopeEvent.cpp  DealGuildRedEnvelopeEvent.h  DealGvgEvent.cpp  DealGvgEvent.h  DealResourceEvent.cpp  DealResourceEvent.h  DealWarGameEvent.cpp  DealWarGameEvent.h  UpdateWorkingStatus.cpp  UpdateWorkingStatus.h
event/: AutoEvent_PDHead.h  CMakeLists.txt  DataHandler.cpp  DataHandler.h  EventDefine.h  EventHandler.cpp  EventHandler.h  EventQueue.cpp  EventQueue.h  FriendInfoLite.pb.cpp  FriendInfoLite.pb.h  MsgBuildingItem.pb.cpp  MsgBuildingItem.pb.h  MsgBunker.pb.cpp  MsgBunker.pb.h  MsgCommon.pb.cpp  MsgCommon.pb.h  MsgGameUnit.pb.cpp  MsgGameUnit.pb.h  MsgHangars.pb.cpp  MsgHangars.pb.h  MsgMission.pb.cpp  MsgMission.pb.h  MsgPlanet.pb.cpp  MsgPlanet.pb.h  MsgShipyard.pb.cpp  MsgShipyard.pb.h  MsgSocialItems.pb.cpp  MsgSocialItems.pb.h  MsgTransaction.pb.cpp  MsgTransaction.pb.h  RceBattleDamagesPack.pb.cpp  RceBattleDamagesPack.pb.h  RceCustomizedActivity.pb.cpp  RceCustomizedActivity.pb.h  RceDeployUnits.pb.cpp  RceDeployUnits.pb.h  RceFinished.pb.cpp  RceFinished.pb.h  RceHeartbeat.pb.cpp  (+178 more)
gamed/: AdminHandler.cpp  AdminHandler.h  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  ClientHandler_Auto.h  CountryHandler.cpp  CountryHandler.h  Daemon.cpp  Daemon.h  GameCacheModule.cpp  GameCacheModule.h  GameDataHandler.cpp  GameDataHandler.h  GameDataSaver.cpp  GameDataSaver.h  GameEventAutoCreate.cpp  GameEventHandler.cpp  GameEventHandler.h  GameHttpHandler.cpp  GameHttpHandler.h  GameNetHandler.cpp  GameNetHandler.h  GameRgnDataHandler.cpp  GameRgnDataHandler.h  MemCacheServerHandler.cpp  MemCacheServerHandler.h  PlatHandler.cpp  PlatHandler.h  PolicyHandler.cpp  PolicyHandler.h  WorldHandler.cpp  WorldHandler.h  gamed.vcproj  gdhandler.cpp  gdhandler.h
gamed/event/: AutoEventHead.h  BaseEvent.h  DealAdminEvent.cpp  DealAdminEvent.h  DealCountryHandle.cpp  DealCountryHandle.h  DealRseBroadcast.cpp  DealRseBroadcast.h  GMHandler.cpp  GMHandler.h  MessageDef.h  RceBattleDamagesPackHandle.cpp  RceBattleDamagesPackHandle.h  RceCustomizedActivityHandle.cpp  RceCustomizedActivityHandle.h  RceDeployUnitsHandle.cpp  RceDeployUnitsHandle.h  RceFinishedHandle.cpp  RceFinishedHandle.h  RceHeartbeatHandle.cpp  RceHeartbeatHandle.h  RceItemDamagedHandle.cpp  RceItemDamagedHandle.h  RceItemMineExplodedHandle.cpp  RceItemMineExplodedHandle.h  RceLoginHandle.cpp  RceLoginHandle.h  RceNpcAttackStartHandle.cpp  RceNpcAttackStartHandle.h  RceObtainAskForHelpHandle.cpp  RceObtainAskForHelpHandle.h  RceObtainAttackerListHandle.cpp  RceObtainAttackerListHandle.h  RceObtainBattleReplayHandle.cpp  RceObtainBattleReplayHandle.h  RceObtainCustomizerHandle.cpp  RceObtainCustomizerHandle.h  RceObtainHangarsHelpHandle.cpp  RceObtainHangarsHelpHandle.h  RceObtainMessagesListHandle.cpp  (+69 more)
logic/: BattleManager.cpp  BattleManager.h  CMakeLists.txt  CollectablesTbl.cpp  CollectablesTbl.h  CommonSystemMgr.cpp  CommonSystemMgr.h  CostGiftCfg.cpp  CostGiftCfg.h  CountryNameTbl.cpp  CountryNameTbl.h  DefensesTbl.cpp  DefensesTbl.h  FlashVersionCfg.cpp  FlashVersionCfg.h  FriendGiftCfg.cpp  FriendGiftCfg.h  FriendInfoCfg.cpp  FriendInfoCfg.h  GameConfigMgr.cpp  GameConfigMgr.h  GameConstantSetCfg.cpp  GameConstantSetCfg.h  GameConstantSetLogic.cpp  GameConstantSetLogic.h  GameServerConfig.cpp  GameServerConfig.h  GameSrvCfg.cpp  GameSrvCfg.h  GameUnitsTbl.cpp  GameUnitsTbl.h  HangarTbl.cpp  HangarTbl.h  InitItemTbl.cpp  InitItemTbl.h  InviteFrdGiftCfg.cpp  InviteFrdGiftCfg.h  ItemManager.cpp  ItemManager.h  ItemSumTbl.cpp  (+47 more)
(+136 files in other folders)
