# CMakeLists file

add_library(common  
xml/tinystr.cpp
xml/tinyxml.cpp
xml/tinyxmlerror.cpp
xml/tinyxmlparser.cpp
json/json_reader.cpp
json/json_value.cpp
json/json_writer.cpp
Clock.cpp
coredump.cpp
counter.cpp
DBC.cpp
distribution.cpp
GeomUtil.cpp
HotCacheDBCfg.cpp
Ini.cpp
Log.cpp
magicqueue.cpp
math-util.cpp
md5.cpp
Msg2QQ.cpp
Proto2Json.cpp
Rand.cpp
rand_util.cpp
ServerConfig.cpp
staticfile.cpp
statistics.cpp
string-util.cpp
SysLog.cpp
SysLogNet.cpp
tcrdb_win.cpp
Timestamp.cpp
) 
