# CMakeLists file

add_library(event  
DataHandler.cpp
EventHandler.cpp
event.pb.cpp
EventQueue.cpp
event_sub.pb.cpp
FriendInfoLite.pb.cpp
MsgBuildingItem.pb.cpp
MsgBunker.pb.cpp
MsgCommon.pb.cpp
MsgGameUnit.pb.cpp
MsgHangars.pb.cpp
MsgMission.pb.cpp
MsgPlanet.pb.cpp
MsgShipyard.pb.cpp
MsgSocialItems.pb.cpp
MsgTransaction.pb.cpp
RceBattleDamagesPack.pb.cpp
RceCustomizedActivity.pb.cpp
RceFinished.pb.cpp
RceHeartbeat.pb.cpp
RceItemMineExploded.pb.cpp
RceLogin.pb.cpp
RceNpcAttackStart.pb.cpp
RceObtainAskForHelp.pb.cpp
RceObtainAttackerList.pb.cpp
RceObtainBattleReplay.pb.cpp
RceObtainCustomizer.pb.cpp
RceObtainHangarsHelp.pb.cpp
RceObtainMessagesList.pb.cpp
RceObtainNeighborsList.pb.cpp
RceObtainNpcList.pb.cpp
RceObtainPayUrlParame.pb.cpp
RceObtainRandomTargets.pb.cpp
RceObtainSocialItems.pb.cpp
RceObtainSocialUserInfo.pb.cpp
RceObtainUniverse.pb.cpp
RceObtainVisitHelps.pb.cpp
RceOnlineReward.pb.cpp
RceQueryCheckAndLockAccountIfPossible.pb.cpp
RceQueryGalaxyWindow.pb.cpp
RceQueryPvE.pb.cpp
RceQueryReceiveWishItem.pb.cpp
RceQueryRefuseReceiveWishItem.pb.cpp
RceQuerySendWishItem.pb.cpp
RceQueryStarInfo.pb.cpp
RceQueryStarsBookmarks.pb.cpp
RceQueryVisitHelpsGiftUnitsOnBunker.pb.cpp
RceUpdateAlliances.pb.cpp
RceUpdateGameUnits.pb.cpp
RceUpdateItem.pb.cpp
RceUpdateMisc.pb.cpp
RceUpdateMissions.pb.cpp
RceUpdateProfile.pb.cpp
RceUpdateShips.pb.cpp
RceUpdateSocialItem.pb.cpp
RceUpdateStarsBookmarks.pb.cpp
RceUpdateTargets.pb.cpp
RceUpdateVisitHelp.pb.cpp
RseAuthState.pb.cpp
RseBattleDamagesPack.pb.cpp
RseCustomizedActivity.pb.cpp
RseError.pb.cpp
RseFinished.pb.cpp
RseHeartbeat.pb.cpp
RseItemMineExploded.pb.cpp
RseLogin.pb.cpp
RseObtainAskForHelp.pb.cpp
RseObtainAttackerList.pb.cpp
RseObtainBattleReplay.pb.cpp
RseObtainCustomizer.pb.cpp
RseObtainHangarsHelp.pb.cpp
RseObtainMessagesList.pb.cpp
RseObtainNeighborsList.pb.cpp
RseObtainNpcList.pb.cpp
RseObtainPayUrlParame.pb.cpp
RseObtainRandomTargets.pb.cpp
RseObtainSocialItems.pb.cpp
RseObtainSocialUserInfo.pb.cpp
RseObtainUniverse.pb.cpp
RseObtainVisitHelps.pb.cpp
RseQueryCheckAndLockAccountIfPossible.pb.cpp
RseQueryGalaxyWindow.pb.cpp
RseQueryPvE.pb.cpp
RseQueryReceiveWishItem.pb.cpp
RseQueryRefuseReceiveWishItem.pb.cpp
RseQuerySendWishItem.pb.cpp
RseQueryStarInfo.pb.cpp
RseQueryStarsBookmarks.pb.cpp
RseQueryVisitHelpsGiftUnitsOnBunker.pb.cpp
RseUpdateAlliances.pb.cpp
RseUpdateGameUnits.pb.cpp
RseUpdateItem.pb.cpp
RseUpdateMisc.pb.cpp
RseUpdateMissions.pb.cpp
RseUpdateProfile.pb.cpp
RseUpdateShips.pb.cpp
RseUpdateSocialItem.pb.cpp
RseUpdateStarsBookmarks.pb.cpp
RseUpdateTargets.pb.cpp
) 
