# CMakeLists file

add_library(game  
AdminHandler.cpp
ClientHandler.cpp
CountryHandler.cpp
Daemon.cpp
GameDataHandler.cpp
GameDataSaver.cpp
GameEventAutoCreate.cpp
GameEventHandler.cpp
GameNetHandler.cpp
GameRgnDataHandler.cpp
GameSrvCfg.cpp
MemCacheServerHandler.cpp
PlatHandler.cpp
PolicyHandler.cpp
WorldHandler.cpp
event/BaseEvent.cpp
event/DealCountryHandle.cpp
event/RceBattleDamagesPackHandle.cpp
event/RceCustomizedActivityHandle.cpp
event/RceFinishedHandle.cpp
event/RceHeartbeatHandle.cpp
event/RceItemMineExplodedHandle.cpp
event/RceLoginHandle.cpp
event/RceNpcAttackStartHandle.cpp
event/RceObtainAskForHelpHandle.cpp
event/RceObtainAttackerListHandle.cpp
event/RceObtainBattleReplayHandle.cpp
event/RceObtainCustomizerHandle.cpp
event/RceObtainHangarsHelpHandle.cpp
event/RceObtainMessagesListHandle.cpp
event/RceObtainNeighborsListHandle.cpp
event/RceObtainNpcListHandle.cpp
event/RceObtainPayUrlParameHandle.cpp
event/RceObtainRandomTargetsHandle.cpp
event/RceObtainSocialItemsHandle.cpp
event/RceObtainSocialUserInfoHandle.cpp
event/RceObtainUniverseHandle.cpp
event/RceObtainVisitHelpsHandle.cpp
event/RceOnlineRewardHandle.cpp
event/RceQueryCheckAndLockAccountIfPossibleHandle.cpp
event/RceQueryGalaxyWindowHandle.cpp
event/RceQueryPvEHandle.cpp
event/RceQueryReceiveWishItemHandle.cpp
event/RceQueryRefuseReceiveWishItemHandle.cpp
event/RceQuerySendWishItemHandle.cpp
event/RceQueryStarInfoHandle.cpp
event/RceQueryStarsBookmarksHandle.cpp
event/RceQueryVisitHelpsGiftUnitsOnBunkerHandle.cpp
event/RceUpdateAlliancesHandle.cpp
event/RceUpdateGameUnitsHandle.cpp
event/RceUpdateItemHandle.cpp
event/RceUpdateMiscHandle.cpp
event/RceUpdateMissionsHandle.cpp
event/RceUpdateProfileHandle.cpp
event/RceUpdateShipsHandle.cpp
event/RceUpdateSocialItemHandle.cpp
event/RceUpdateStarsBookmarksHandle.cpp
event/RceUpdateTargetsHandle.cpp
event/RceUpdateVisitHelpHandle.cpp
event/TickEventHandler.cpp
event/UpdateWorkingStatus.cpp
event/UserAuth.cpp
event/UserLogin.cpp
) 
