# CMakeLists file

add_library(logic  
BattleManager.cpp
CollectablesTbl.cpp
CostGiftCfg.cpp
CountryNameTbl.cpp
dbinterface.pb.cpp
dbinterface_sub.pb.cpp
DefensesTbl.cpp
FlashVersionCfg.cpp
friendDB.pb.cpp
FriendGiftCfg.cpp
FriendInfoCfg.cpp
GameConfigMgr.cpp
GameConstantSetCfg.cpp
GameConstantSetLogic.cpp
GameSrvCfg.cpp
GameUnitsTbl.cpp
HangarTbl.cpp
InitItemTbl.cpp
InviteFrdGiftCfg.cpp
ItemManager.cpp
ItemSumTbl.cpp
ItemTbl.cpp
LaboratoryTbl.cpp
MissionsTbl.cpp
NPCInfoCfg.cpp
NpcInitItemTbl.cpp
NPCManager.cpp
PlanetManager.cpp
PlatInviteFriendMgr.cpp
Player.cpp
ResourceSilos.cpp
ResourcesTbl.cpp
ShipyardsTbl.cpp
SkuIdTbl.cpp
SocialItemManager.cpp
StarLogic.cpp
User.cpp
WonderDefinitionsTbl.cpp
) 
